# robotiq

.github/workflows/: industrial_ci_action.yml
robotiq_2f_140_gripper_visualization/: README.md
robotiq_2f_140_gripper_visualization/launch/: test_2f_140_model.launch
robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_gazebo.xacro
robotiq_2f_gripper_action_server/launch/: robotiq_2f_gripper_action_server.launch
robotiq_2f_gripper_action_server/src/: robotiq_2f_gripper_action_server.cpp
robotiq_2f_gripper_articulated_gazebo/: CMakeLists.txt  package.xml
robotiq_2f_gripper_articulated_gazebo/launch/: robotiq_gripper_empty_world.launch
robotiq_2f_gripper_articulated_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
robotiq_2f_gripper_articulated_gazebo_plugins/include/robotiq_2f_gripper_articulated_gazebo_plugins/: RobotiqHandPlugin.h
robotiq_2f_gripper_articulated_gazebo_plugins/src/: RobotiqHandPlugin.cpp
robotiq_2f_gripper_control/: CMakeLists.txt
robotiq_2f_gripper_control/nodes/: Robotiq2FGripperActivateGripper.py  Robotiq2FGripperJointStatePublisher.py  Robotiq2FGripperRtuNode.py  Robotiq2FGripperSimpleController.py  Robotiq2FGripperStatusListener.py  Robotiq2FGripperTcpNode.py
robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: robotiq_2f_gripper_ctrl.py
robotiq_3f_gripper_articulated_gazebo/launch/: robotiq_gripper_empty_world.launch
robotiq_3f_gripper_articulated_gazebo_plugins/: CMakeLists.txt  package.xml
robotiq_3f_gripper_articulated_gazebo_plugins/include/robotiq_3f_gripper_articulated_gazebo_plugins/: RobotiqHandPlugin.h
robotiq_3f_gripper_articulated_gazebo_plugins/src/: RobotiqHandPlugin.cpp
robotiq_3f_gripper_control/src/robotiq_3f_gripper_control/: robotiq_3f_gripper_hw_interface.cpp  robotiq_3f_gripper_ros.cpp
robotiq_3f_gripper_visualization/cfg/: robotiq-3f-gripper_actuated_gazebo.xacro
robotiq_3f_gripper_visualization/launch/: robotiq_gripper_upload.launch
robotiq_ft_sensor/src/: rq_sensor_com.cpp
robotiq_ft_sensor/urdf/: robotiq_ft300.urdf.xacro  robotiq_fts150.urdf.xacro
robotiq_ft_sensor/urdf/examples_of_macros/: example_use_robotiq_ft300.xacro
