<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_gripper_articulated_gazebo</name>
  <version>1.0.0</version>
  <description>Launch files for an exampole simulating the Robotiq 2-finger articulated gripper</description>

  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_2f_140_gripper_visualization</exec_depend>
  <exec_depend>robotiq_2f_gripper_articulated_gazebo_plugins</exec_depend>
</package>
