<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_gripper_articulated_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>The Robotiq 2f gripper gazebo plugins package. Based on the 3f gripper gazebo plugins package. This package will provide the same interface to the gripper as one would have if they were interfacing with hardware. Porting code from software to reality should be seamless with this ROS interface now.</description>

  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <license>Apache 2.0</license>
  <author>Devon Ash</author>
  <author>John Hsu</author>
  <author>Wolfgang Merkt</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <build_depend>gazebo</build_depend>
</package>
